--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,5 +3,5 @@
   "minima/initialize";
 
 .wrapper {
-  max-width: calc(1300px - (30px * 2));
+  max-width: calc(1300px - (30px * 2)) !important;
 }
